k8s/swin/pytorch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swin-pytorch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swin-pytorch
  template:
    metadata:
      labels:
        app: swin-pytorch
    spec:
      containers:
        - name: swin-pytorch
          image: svane222/swin-pytorch:cpu
          ports:
            - containerPort: 8006
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8006
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8006
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: swin-pytorch
spec:
  type: ClusterIP
  selector:
    app: swin-pytorch
  ports:
    - protocol: TCP
      port: 8006
      targetPort: 8006
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swin-pytorch-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
    - host: swin-pytorch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: swin-pytorch
                port:
                  number: 8006
