k8s/swin/torchscript.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swin-torchscript
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swin-torchscript
  template:
    metadata:
      labels:
        app: swin-torchscript
    spec:
      containers:
        - name: swin-torchscript
          image: svane222/swin-torchscript:cpu
          ports:
            - containerPort: 8005
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8005
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8005
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: swin-torchscript
spec:
  type: ClusterIP
  selector:
    app: swin-torchscript
  ports:
    - protocol: TCP
      port: 8005
      targetPort: 8005
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swin-torchscript-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
    - host: swin-torchscript
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: swin-torchscript
                port:
                  number: 8005
